# LLM_RAG_system

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  locustfile.py  main.py  pyproject.toml
app/: app.py
app/config/: config.py
app/database/: init_db.py  session.py
app/database/migrations/: 001_add_chunk_article_index_unique.sql  (+1 more)
app/models/: base.py  model_article.py  model_chunk.py  model_embedding.py
app/observability/: __init__.py  langsmith.py
app/routers/: router_article.py  router_chunk.py  router_rag.py  router_search.py
app/schemas/: schema_article.py  schema_chunk.py  schema_embedding.py  schema_rag.py  schema_search.py
app/services/: service_article.py  service_chunk.py  service_embedding.py
article_import/data/: documents.json
article_import/scripts/: import_documents.py
tests/: test_ingestion_pipeline.py  test_preprocess.py  test_text_embedding.py
tests/test_database/: test_session.py
tests/test_embedding/: test_embedder.py  test_embedding_constraints.py  test_embedding_pipeline.py
tests/test_generate/: test_LLM.py  test_generate.py  test_prompt.py
tests/test_generation/: test_langchain_generator.py  test_langchain_llm.py  test_langchain_prompt.py  test_router_rag.py
tests/test_observability/: test_langsmith.py
tests/test_preprocess/: test_embedding_pipeline.py  test_splitter.py
tests/test_rerank/: test_langchain_rerank.py
tests/test_retrieval/: test_langchain_retriever.py  test_retriever.py  test_router_search.py
tests/test_retriver/: questions.json  test_retriver.py  utils.py
(+22 files in other folders)
