[project]
name = "fastapi-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-users[aqlalchemy]>=15.0.5",
    "openai>=2.45.0",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "unstructured>=0.24.1",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-classic>=1.0.8",
    "langchain-openai>=1.4.0",
    "langsmith>=0.10.6",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.pytest.ini_options]
pythonpath = ["."]
